--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "collabflow",
   "version": "0.1.0",
@@ -41,6 +42,7 @@
     "@tanstack/react-table": "^8.19.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
